--- a/src/main/webapp/MathTutorAngular.html
+++ b/src/main/webapp/MathTutorAngular.html
@@ -131,14 +131,14 @@
                                 <td width="15%"	 readonly="readonly" style="font-size:3em; text-align:center;
                                                     width:1.5em; height:1.5em;">=</td>
                                 <td width="15%">
-                                    <div name=otherDiv class="show">
+                                    <div name=otherDiv data-ng-show="otherVar">
                                         <table>
                                             <tr>
                                                 <td>
                                                     <ul>
                                                         <li style="font-size:1em;">Answer</li>
                                                         <li>
-                                                            <input type="number" ng-model="otherAnswer" ng-Keyup="checkEnterKey(event)"
+                                                            <input type="number" name="otherAnswer" ng-model="otherAnswer" ng-Keyup="checkEnterKey(event)"
                                                                    style="font-size:2em; -wap-input-format: 'N'; text-align:center;; width:3.5em; height:1.5em;" />
                                                         </li>
                                                     </ul>
@@ -153,7 +153,7 @@
                                                     <ul>
                                                         <li style="font-size:1em;">Answer</li>
                                                         <li>
-                                                            <input type="number" name="divideAnswer" id="divideAnswer" ng-Keyup="checkEnterKey(event)"
+                                                            <input type="number" name="divideAnswer" ng-model="divideAnswer" ng-Keyup="checkEnterKey(event)"
                                                                    style="font-size:2em; -wap-input-format: 'N'; text-align:center;; width:2.5em; height:1.5em;" />
                                                         </li>
                                                     </ul>
@@ -162,7 +162,7 @@
                                                     <ul>
                                                         <li style="font-size:1em;">Remainder</li>
                                                         <li>
-                                                            <input type="number" name="remainder" id="remainder" ng-Keyup="checkEnterKey(event)"
+                                                            <input type="number" ng-model="remainder" ng-Keyup="checkEnterKey(event)"
                                                                    style="font-size:2em; -wap-input-format: 'N'; text-align:center;; width:2em; height:1.5em;" />
                                                         </li>
                                                     </ul>
