--- a/src/main/webapp/MathTutorAngular.html
+++ b/src/main/webapp/MathTutorAngular.html
@@ -175,7 +175,7 @@
                                     <table>
                                         <tr>
                                             <td width="50%">
-                                                <input type="text" ng-bind="responseText" readonly="readonly"
+                                                <input type="text" ng-model="responseText" ng-style="responseStyle" readonly="readonly"
                                                        style="font-size:1em; text-align:center; vertical-align:9px; width:4.4em; height:1em;" />
                                             </td>
                                         </tr>
@@ -215,7 +215,7 @@
                                     <ul>
                                         <li style="font-size:1em;">Wrong:</li>
                                         <li>
-                                            <input type="text" name="numberWrong" id="numberWrong"
+                                            <input type="text" ng-model="numberWrong" id="numberWrong"
                                                    style="font-size:2em; -wap-input-format: 'N'; text-align:center;; width:1.5em; height:1.5em;" />
                                         </li>
                                     </ul>
@@ -224,7 +224,7 @@
                                     <ul>
                                         <li style="font-size:1em;">Right:</li>
                                         <li>
-                                            <input type="text" name="numberRight" id="numberRight"
+                                            <input type="text" ng-model="numberRight" id="numberRight"
                                                    style="font-size:2em; -wap-input-format: 'N'; text-align:center;; width:1.5em; height:1.5em;" />
                                         </li>
                                     </ul>
@@ -233,7 +233,7 @@
                                     <ul>
                                         <li style="font-size:1em;"><b>Percent:</b></li>
                                         <li>
-                                            <input type="text" name="percentage" id="percentage"
+                                            <input type="text" ng-model="percentage" name="percentage" ng-style="percentStyle"
                                                    style="font-size:2em; -wap-input-format: 'N'; text-align:center;; width:2em; height:1.5em;" />
                                         </li>
                                     </ul>
