original versions of math tutor

--- a/projectFilesBackup/MathTutor_old.html
+++ b/projectFilesBackup/MathTutor_old.html
@@ -2,7 +2,7 @@
 <html>		
 	<head>			
 		<title>Pat's Elementary Math Tutor</title>				
-		<script type="text/javascript" src="mathtutor.js"></script>
+		<script type="text/javascript" src="mathtutor_old.js"></script>
 		<script type="text/javascript" src="../src/main/webapp/js/jquery-1.6.4.js"></script>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 		<meta name="description" content="A simple math tutor to help learn multiplication, division, addition and subtraction of numbers from 1 through 12." />
