interim modification to use Angular.js

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -254,7 +254,7 @@
             var mathApp = angular.module("mathApp", []);
         </script>
 
-        <script src="js/mathtutorangular.js"></script>
+        <script src="js/mathtutor.js"></script>
 
     </form>
     <fieldset>
