--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -4,7 +4,6 @@
     <title>Pat's Elementary Math Tutor</title>
     <script type="text/javascript" src="js/jquery-1.6.4.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-    <script type="text/javascript" src="js/mathtutordirectives.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta name="description" content="A simple math tutor to help learn multiplication, division, addition and subtraction of numbers from 1 through 12." />
     <meta name="robots" content="index, follow" />
@@ -255,6 +254,7 @@
         </script>
 
         <script src="js/mathtutor.js"></script>
+        <script src="js/mathtutordirectives.js"></script>
 
     </form>
     <fieldset>
