Modified to use Angular.js

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -138,7 +138,7 @@
                                                     <ul>
                                                         <li style="font-size:1em;">Answer</li>
                                                         <li>
-                                                            <div ng-show="focusNonDivideAnswer">
+                                                            <div ng-show="focusOtherAnswer">
                                                                 <input type="number" focus-if="focusNonDivideAnswer"
                                                                        id="otherAnswer" name="otherAnswer"
                                                                        ng-model="otherAnswer" ng-Keyup="checkEnterKey(event)"
