Interim changes to Prototypes.

--- a/src/main/webapp/WEB-INF/MathTutor.html
+++ b/src/main/webapp/WEB-INF/MathTutor.html
@@ -58,7 +58,7 @@
 							<table border="0" width="100%" cellpadding="10">								
 								<tr>										
 									<td width="40%">									
-										<label for="numberRadio"> Pick number to learn.</label>								
+										<label> Pick number to learn.</label>
 									</td>										
 									<td width="20%">									
 										<input type="radio" name="numberRadio" value="1">1<br>
@@ -86,7 +86,7 @@
 							<table border="0" width="100%" cellpadding="10">								
 								<tr>										
 									<td width="40%">									
-										<label for="functionRadio"> Pick math function.</label>								
+										<label> Pick math function.</label>
 									</td>										
 									<td width="60%">									
 										<input type="radio" name="functionRadio" value="1">Add<br>
