Interim changes to Prototypes.

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -104,7 +104,7 @@
 				<tr>									
 					<td width="25%"></td>									
 					<td width="75%">								
-						<input type="button" name="Submit" value="Start" onClick="startTutor(this)"/>
+						<input type="button" name="Submit" value="Start" onClick="initializeTutor(this)"/>
 					</td>							
 				</tr>					
 			</table>
