Interim changes to Angular.

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -138,7 +138,8 @@
 													<ul>
 														<li style="font-size:1em;">Answer</li>
 														<li>
-															<input type="number" id="otherAnswer" name="otherAnswer"
+															<input type="number"
+																   id="otherAnswerControl" name="otherAnswerControl"
 																   ng-model="otherAnswer" ng-Keyup="checkEnterKey(event)"
 																   style="font-size:2em; -wap-input-format: 'N';
 																   text-align:center;; width:3.5em; height:1.5em;" />
@@ -155,7 +156,8 @@
 													<ul>
 														<li style="font-size:1em;">Answer</li>
 														<li>
-															<input type="number" name="divideAnswer" id="divideAnswer"
+															<input type="number"
+																   name="divideAnswerControl" id="divideAnswerControl"
 																   ng-model="divideAnswer" ng-Keyup="checkEnterKey(event)"
 																   style="font-size:2em; -wap-input-format: 'N';
 																   text-align:center;; width:2.5em; height:1.5em;" />
