Add password generator

--- a/src/main/webapp/PasswordGenerator.html
+++ b/src/main/webapp/PasswordGenerator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Online Password Generator</title>
-    <script type="text/javascript" src="js/Passwords.js"></script>
+    <script type="text/javascript" src="js/passwords.js"></script>
     <script type="text/javascript" src="js/jquery-1.6.4.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
