--- a/src/main/webapp/R-44_WB.html
+++ b/src/main/webapp/R-44_WB.html
@@ -4,6 +4,7 @@
     <title>Robinson R44 Raven II Online Weight and Balance Calculator</title>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script>
     $(function() {
       $( "#tabs" ).tabs();
