Add final changes to password generator

--- a/src/main/webapp/PasswordGenerator.html
+++ b/src/main/webapp/PasswordGenerator.html
@@ -13,7 +13,7 @@
 
     <style>
 
-        body {font-size: 80%;}
+        body {font-size: 100%;}
 
         .hide {display:none;}
         .show {display:block;}
@@ -31,7 +31,7 @@
     <table bgcolor="#66FFFF" border="0" width="100%" cellpadding="10">
         <tr>
             <td>
-                <h1 align="center">Pat's Password Generator</h1>
+                <h1 align="center">Pat's Random Password Generator</h1>
                 <h4>
                     <table border="0" width="100%" cellpadding="10">
                         <tr>
@@ -56,16 +56,41 @@
         <tr>
             <td>
                 <fieldset>
-                    <!--<legend> Password Length: </legend>-->
-                    <table border="0" width="60%" cellpadding="10">
+                    <legend> Password Length: </legend>
+                    <table border="0" width="100%" cellpadding="10">
                         <tr>
                             <td width="25%">
-                                <label> Enter the password length here.</label>
+                                <label> Enter desired password length:</label>
                             </td>
                             <td width="25%">
                                 <input type="text" name="pwdLength"
-                                       id="pwdLength" maxlength="2" size="2" value="16"
-                                       onchange="verifyLength(this)" />
+                                       id="pwdLength" maxlength="2" size="2" value="16" />
+                            </td>
+                        </tr>
+                    </table>
+                </fieldset>
+            </td>
+        </tr>
+    </table>
+    <table border="0" width="100%">
+        <tr>
+            <td>
+                <fieldset>
+                    <legend> Special Characters: </legend>
+                    <table border="0" width="100%" cellpadding="10">
+                        <tr>
+                            <td width="25%">
+                                <label> These 12 special characters are used:</label>
+                            </td>
+                            <td width="25%">! @ # $ % ^ * ( ) _ + =</td>
+                        </tr>
+                        <tr>
+                            <td width="25%">
+                                <label for="excludeChars"> You can enter characters to EXCLUDE:</label>
+                            </td>
+                            <td width="25%">
+                                <input type="text" name="excludeChars"
+                                       id="excludeChars" maxlength="12" size="12" value="" />
                             </td>
                         </tr>
                     </table>
@@ -85,30 +110,32 @@
         <tr>
             <td>
                 <fieldset>
-                    <!--<legend> Select password with desired strength: </legend>-->
-                    <table width="60%">
+                    <legend> Select password with desired strength: </legend>
+                    <table border="0" width="100%" cellpadding="10">
                         <tr>
                             <td width="25%">
-                                <label for="hexOnly">Hex Only:</label>
+                                <label for="hexOnly">All numbers and upper A-F (Hex):</label>
                             </td>
                             <td width="25%">
-                                <textarea name="hexOnly" id="hexOnly" rows="1" cols="75" wrap="off" ></textarea>
+                                <input type="text" name="hexOnly" id="hexOnly" size="45"/>
                             </td>
                         </tr>
                         <tr>
                             <td width="25%">
-                                <label for="hexAllUpper">All numbers and upper case:</label>
+                                <label for="hexAllUpper">All numbers and upper A-Z:</label>
                             </td>
                             <td width="25%">
-                                <textarea name="hexAllUpper" id="hexAllUpper" rows="1" cols="75" wrap="off" ></textarea>
+                                <!--<textarea name="hexAllUpper" id="hexAllUpper" rows="1" cols="75" wrap="off" ></textarea>-->
+                                <input type="text" name="hexAllUpper" id="hexAllUpper" size="45"/>
                             </td>
                         </tr>
                         <tr>
                             <td width="25%">
-                                <label for="hexUpperLower">All numbers with upper and lower case:</label>
+                                <label for="hexUpperLower">All numbers with upper and lower A-Z:</label>
                             </td>
                             <td width="25%">
-                                <textarea name="hexUpperLower" id="hexUpperLower" rows="1" cols="75" wrap="off" ></textarea>
+                                <!--<textarea name="hexUpperLower" id="hexUpperLower" rows="1" cols="75" wrap="off" ></textarea>-->
+                                <input type="text" name="hexUpperLower" id="hexUpperLower" size="45"/>
                             </td>
                         </tr>
                         <tr>
@@ -116,7 +143,8 @@
                                 <label for="hexAllSpecial">All numbers, letters and special characters:</label>
                             </td>
                             <td width="25%">
-                                <textarea name="hexAllSpecial" id="hexAllSpecial" rows="1" cols="75" wrap="off" ></textarea>
+                                <!--<textarea name="hexAllSpecial" id="hexAllSpecial" rows="1" cols="75" wrap="off" ></textarea>-->
+                                <input type="text" name="hexAllSpecial" id="hexAllSpecial" size="45"/>
                             </td>
                         </tr>
                     </table>
