Modified PasswordGenerator to show 3 passwords

--- a/src/main/webapp/PasswordGenerator.html
+++ b/src/main/webapp/PasswordGenerator.html
@@ -120,15 +120,15 @@
                                 <input type="text" name="hexOnly" id="hexOnly" size="45"/>
                             </td>
                         </tr>
-                        <tr>
-                            <td width="25%">
-                                <label for="hexAllUpper">All numbers and upper A-Z:</label>
-                            </td>
-                            <td width="25%">
-                                <!--<textarea name="hexAllUpper" id="hexAllUpper" rows="1" cols="75" wrap="off" ></textarea>-->
-                                <input type="text" name="hexAllUpper" id="hexAllUpper" size="45"/>
-                            </td>
-                        </tr>
+                        <!--<tr>-->
+                            <!--<td width="25%">-->
+                                <!--<label for="hexAllUpper">All numbers and upper A-Z:</label>-->
+                            <!--</td>-->
+                            <!--<td width="25%">-->
+                                <!--&lt;!&ndash;<textarea name="hexAllUpper" id="hexAllUpper" rows="1" cols="75" wrap="off" ></textarea>&ndash;&gt;-->
+                                <!--<input type="text" name="hexAllUpper" id="hexAllUpper" size="45"/>-->
+                            <!--</td>-->
+                        <!--</tr>-->
                         <tr>
                             <td width="25%">
                                 <label for="hexUpperLower">All numbers with upper and lower A-Z:</label>
