camel case hintDiv in math tutor js and html

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -188,7 +188,7 @@
 							</td>
 						</tr>
 					</table>
-					<div name="hintdiv" class="hide">
+					<div name="hintDiv" class="hide">
 						<table border="0" width="100%" cellpadding="10">
 							<tr>
 								<td width="25%"></td>
