--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -263,5 +263,7 @@
 		</tr>
 	</table>
 </fieldset>
+<!--<script src="webjars/jquery/3.3.1/jquery.min.js"></script>-->
+<!--<script type="text/javascript" src="js/mathtutor.js"></script>-->
 </body>
 </html>
