--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -4,6 +4,7 @@
         <meta charset="ISO-8859-1">
         <title>Pat's Poker Tournament</title>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="js/poker.js"></script>
         <style type="text/css">
             body {
                 font-size: 15px;
