--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -58,7 +58,10 @@
                 <td><input size="7" type='text' id='bounty' name='bounty[]'/></td>
                 <td><input size="7" type='text' id='lastMan' name='lastMan[]'/></td>
                 <td><input size="7" type='text' id='addOn' name='addOn[]'/></td>
+            </tr>
                 <td><input type="button" id="savePlayer" value="Save Player"></input></td>
+            <tr>
+
             </tr>
         </table>
         <br/>
@@ -108,16 +111,13 @@
         <br/>
         <br/>
         <div align="left" width="50%">
-            <h1>Winners:</h1>
-        </div>
-        <div id="myHeaders" align="left" width="50%">
-            Chop Counts:
+            <h1>Chops:</h1>
         </div>
         <table border="0" width="100%" cellpadding="5">
             <tr>
-                <th align="left" width="25%">BuyIn & AddOn</th>
+                <th align="left" width="25%">BuyIn & AddOn Count</th>
                 <th align="left" width="25%">Chop Amount</th>
-                <th align="left" width="20%">Last Man</th>
+                <th align="left" width="20%">Last Man Count</th>
                 <th align="left" width="30%">Chop Amount</th>
             </tr>
             <tr>
@@ -126,30 +126,35 @@
                 <td><input size="7" maxwidth="10" type="text" id="lastManPlayers"></td>
                 <td><input size="7" maxwidth="10" type="text" id="lastManAmount"></td>
             </tr>
+        </table>
+        <table>
+            <tr>
+                <th align="left" width="20%"></th>
+                <th align="left" width="30%"></th>
+                <th align="left" width="50%"></th>
+            </tr>
             <tr>
                 <td>
-                    <button type="button" width="25%" id="chopBtn">Chop BuyIn & AddOn</button>
+                    <button type="button" id="chopBtn">BuyIn & AddOn</button>
                 </td>
                 <td>
-                    <button type="button" width="25%" id="chopAllBtn">Chop + Last Man</button>
+                    <button type="button" id="chopAllBtn">+ Last Man</button>
                 </td>
                 <td>
-                    <button type="button" width="50%" id="chopLastManBtn">Chop Last Man</button>
+                    <button type="button" id="chopLastManBtn">Last Man</button>
                 </td>
                 <td></td>
             </tr>
         </table>
-        <div>
-            <table>
-            </table>
+        <br/>
+        <br/>
+        <div align="left" width="50%">
+            <h1>Winners:</h1>
         </div>
-        <br/>
-        <br/>
-        <br/>
         <button type="button" id="addWinnerBtn">Add</button>
         <button type="button" id="deleteWinnerBtn">Delete</button>
-        <button type="button" id="computeBtn">Compute BuyIn & AddOn</button>
-        <button type="button" id="computeLastManBtn">Compute + Last Man</button>
+        <button type="button" id="computeBtn">BuyIn & AddOn</button>
+        <button type="button" id="computeLastManBtn">+ Last Man</button>
         <table border="0" width="100%" cellpadding="5">
             <thead>
             <tr>
