Fix minus rebuy bug and alert comments

--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -54,10 +54,10 @@
             </tr>
             <tr>
                 <td><input size="20" type='text' id='player_name' name='player_name[]'/></td>
-                <td><input size="7" type='text' value="0.00" id='buyIn' name='buyIn[]'/></td>
-                <td><input size="7" type='text' value="0.00" id='bounty' name='bounty[]'/></td>
-                <td><input size="7" type='text' value="0.00" id='lastMan' name='lastMan[]'/></td>
-                <td><input size="7" type='text' value="0.00" id='addOn' name='addOn[]'/></td>
+                <td><input size="7" type='text' value=0.00 id='buyIn' name='buyIn[]'/></td>
+                <td><input size="7" type='text' value=0.00 id='bounty' name='bounty[]'/></td>
+                <td><input size="7" type='text' value=0.00 id='lastMan' name='lastMan[]'/></td>
+                <td><input size="7" type='text' value=0.00 id='addOn' name='addOn[]'/></td>
             </tr>
                 <td><input type="button" id="savePlayer" value="Save Player"></input></td>
             <tr>
