Added about function

--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -39,6 +39,22 @@
     <body>
     <header>
         <h1>Pat's Poker Tournament Worksheet</h1>
+        <h4>
+            <table border="0" width="100%" cellpadding="10">
+                <tr>
+                    <td width="15%">
+                        <input type="button" name="About" value="User Guide" onClick="getPokerAbout(this)"
+                               style="font-size:.9em; height:1.8em;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td width="15%"
+                        style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+                        <a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+                    </td>
+                </tr>
+            </table>
+        </h4>
     </header>
     <div id="container">
         <div id="myHeaders" align="left" width="100%">
