Updated User Guide information

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -41,7 +41,7 @@
 						<tr>
 							<td width="15%"
 								style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
-								<a href="mailto:pat@patstools.com">Pat@patstools.com</a>.
+								<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
 							</td>
 						</tr>
 					</table>
