--- a/src/main/webapp/XmlFormatter.html
+++ b/src/main/webapp/XmlFormatter.html
@@ -29,8 +29,14 @@
 							</table>
 						</h4>
 					</td>							
-				</tr>					
-			</table>					
+				</tr>
+				<tr>
+					<td width="15%"
+						style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+						<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+					</td>
+				</tr>
+			</table>
 			<br />					
 			<fieldset>						
 				<legend> Paste your XML in the text box: </legend>						
