--- a/src/main/webapp/SqlFormatter.html
+++ b/src/main/webapp/SqlFormatter.html
@@ -22,15 +22,21 @@
 									<td width="15%">								
 										<input type="button" name="About" value="About" onClick="getSqlAbout(this)" />
 									</td>
-									<td width="85%">link to: 
+									<td width="85%">link to:
 										<a href="./XmlFormatter.html">XmlFormatter</a>
 									</td>
 								</tr>
 							</table>
 						</h4>
 					</td>							
-				</tr>					
-			</table>					
+				</tr>
+				<tr>
+					<td width="15%"
+						style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+						<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+					</td>
+				</tr>
+			</table>
 			<br />					
 			<fieldset>						
 				<legend> Paste your SQL in the text box: </legend>						
