Add hyperlinks to each other

--- a/src/main/webapp/MathTutor.html
+++ b/src/main/webapp/MathTutor.html
@@ -30,7 +30,7 @@
 		<tr>
 			<td>
 				<h1 align="center">Pat's Elementary Math Tutor</h1>
-				<h4>
+				<h2>
 					<table border="0" width="100%" cellpadding="10">
 						<tr>
 							<td width="15%">
@@ -39,13 +39,30 @@
 							</td>
 						</tr>
 						<tr>
-							<td width="15%"
-								style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+							<td width="25%"	style="font-size:.9em; height:1.7em;">
+								Email errors, comments or suggestions to
 								<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
 							</td>
 						</tr>
 					</table>
-				</h4>
+					<table>
+						<tr>
+							<td width="10%">Other links:</td>
+							<td width="10%">
+								<a href="./PasswordGenerator.html">Password Generator</a>
+							</td>
+							<td width="10%">
+								<a href="./PokerWorksheet.html">Poker Worksheet</a>
+							</td>
+							<td width="10%">
+								<a href="./SqlFormatter.html">Sql Formatter</a>
+							</td>
+							<td width="10%">
+								<a href="./XmlFormatter.html">Xml Formatter</a>
+							</td>
+						</tr>
+					</table>
+				</h2>
 			</td>
 		</tr>
 	</table>
