--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -43,15 +43,29 @@
             <table border="0" width="100%" cellpadding="10">
                 <tr>
                     <td width="15%">
-                        <input type="button" name="About" value="User Guide" onClick="getPokerAbout(this)"
-                               style="font-size:.9em; height:1.8em;" />
+                        <input type="button" name="About" value="User Guide" onClick="getPokerAbout(this)"/>
                     </td>
-                </tr>
-                <tr>
-                    <td width="15%"
-                        style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+                    <td width="85%" style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
                         <a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
                     </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td width="15%">Other links:</td>
+                    <td width="15%">
+                        <a href="./MathTutor.html">Math Tutor</a>
+                    </td>
+                    <td width="15%">
+                        <a href="./PasswordGenerator.html">Password Generator</a>
+                    </td>
+                    <td width="15%">
+                        <a href="./SqlFormatter.html">Sql Formatter</a>
+                    </td>
+                    <td width="15%">
+                        <a href="./XmlFormatter.html">Xml Formatter</a>
+                    </td>
+                    <td width="20%"></td>
                 </tr>
             </table>
         </h4>
