--- a/src/main/webapp/SqlFormatter.html
+++ b/src/main/webapp/SqlFormatter.html
@@ -22,8 +22,20 @@
 									<td width="15%">								
 										<input type="button" name="About" value="About" onClick="getSqlAbout(this)" />
 									</td>
-									<td width="85%">link to:
-										<a href="./XmlFormatter.html">XmlFormatter</a>
+								</tr>
+								<tr>
+									<td width="10%">Other links:</td>
+									<td width="10%">
+										<a href="./MathTutor.html">Math Tutor</a>
+									</td>
+									<td width="10%">
+										<a href="./PasswordGenerator.html">Password Generator</a>
+									</td>
+									<td width="10%">
+										<a href="./PokerWorksheet.html">Poker Worksheet</a>
+									</td>
+									<td width="10%">
+										<a href="./XmlFormatter.html">Xml Formatter</a>
 									</td>
 								</tr>
 							</table>
@@ -31,10 +43,12 @@
 					</td>							
 				</tr>
 				<tr>
-					<td width="15%"
-						style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
-						<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
-					</td>
+					<h3>
+						<td width="25%"
+							style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+							<a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+						</td>
+					</h3>
 				</tr>
 			</table>
 			<br />					
