--- a/src/main/webapp/XmlFormatter.html
+++ b/src/main/webapp/XmlFormatter.html
@@ -22,8 +22,20 @@
 									<td width="15%">								
 										<input type="button" name="About" value="About" onClick=getXmlAbout(this) />
 									</td>
-									<td width="85%">link to:
-										<a href="./SqlFormatter.html">SqlFormatter</a>
+								</tr>
+								<tr>
+									<td width="10%">Other links:</td>
+									<td width="10%">
+										<a href="./MathTutor.html">Math Tutor</a>
+									</td>
+									<td width="10%">
+										<a href="./PasswordGenerator.html">Password Generator</a>
+									</td>
+									<td width="10%">
+										<a href="./PokerWorksheet.html">Poker Worksheet</a>
+									</td>
+									<td width="10%">
+										<a href="./SqlFormatter.html">Sql Formatter</a>
 									</td>
 								</tr>
 							</table>
