--- a/src/main/webapp/PasswordGenerator.html
+++ b/src/main/webapp/PasswordGenerator.html
@@ -41,9 +41,26 @@
                             </td>
                         </tr>
                         <tr>
-                            <td width="15%"
+                            <td width="25%"
                                 style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
                                 <a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
+                            </td>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td width="10%">Other links:</td>
+                            <td width="10%">
+                                <a href="./MathTutor.html">Math Tutor</a>
+                            </td>
+                            <td width="10%">
+                                <a href="./PokerWorksheet.html">Poker Worksheet</a>
+                            </td>
+                            <td width="10%">
+                                <a href="./SqlFormatter.html">Sql Formatter</a>
+                            </td>
+                            <td width="10%">
+                                <a href="./XmlFormatter.html">Xml Formatter</a>
                             </td>
                         </tr>
                     </table>
