Added meta name description

--- a/src/main/webapp/PasswordGenerator.html
+++ b/src/main/webapp/PasswordGenerator.html
@@ -7,7 +7,7 @@
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <meta name="description" content="A flexible password generator that gives you four password options to choose from depending on the desired password strength." />
+    <meta name="description" content="A flexible password generator that gives you three password options depending on your desired password strength." />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Pat Keeler" />
 
