--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -5,6 +5,9 @@
         <title>Pat's Poker Tournament</title>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="js/poker.js"></script>
+        <meta name="description" content="A free online poker tournament worksheet to compute tournament payout money." />
+        <meta name="robots" content="index, follow" />
+        <meta name="author" content="Pat Keeler" />
         <style type="text/css">
             body {
                 font-size: 15px;
