Add Select All and UnSelect All

--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -113,6 +113,9 @@
                 <tbody id="tbodyRow">
                 </tbody>
             </table>
+            <button type="button" id="selectAll">Select All</button>
+            <button type="button" id="unSelectAll">UnSelect All</button>
+            &nbsp
             <button type="button" id="delete-row">Delete Player</button>
             &nbsp
             <button type="button" id="btnPlusRebuy">+ Rebuy</button>
