--- a/src/main/webapp/PokerWorksheet.html
+++ b/src/main/webapp/PokerWorksheet.html
@@ -48,9 +48,10 @@
                     <td width="15%">
                         <input type="button" name="About" value="User Guide" onClick="getPokerAbout(this)"/>
                     </td>
-                    <td width="85%" style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
+                    <td width="55%" style="font-size:.9em; height:1.7em;">Email errors, comments or suggestions to
                         <a href="mailto:keelerpl@gmail.com">keelerpl@gmail.com</a>.
                     </td>
+                    <td width="30%"></td>
                 </tr>
             </table>
             <table>
